--- a/tesi/sections/2.tex
+++ b/tesi/sections/2.tex
@@ -1,10 +1,13 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-    \begin{section}{Homology and cohomology on graphs}
+    \begin{section}{Definition of Graph}
         \subfile{sections/2/1}   
     \end{section}
-    % \begin{section}{Fourier Transform on Graphs}
-    %     \subfile{sections/2/2}
-    % \end{section}
+    \begin{section}{Homology and Cohomology on Graphs}
+        \subfile{sections/2/2}
+    \end{section}
+    \begin{section}{Laplacian Operators on Graphs}
+        \subfile{sections/2/3}
+    \end{section}
 \end{document}
