--- a/tesi/sections/1/4.tex
+++ b/tesi/sections/1/4.tex
@@ -22,6 +22,7 @@
     to be the dual of the boundary maps, hence satisfying a dual version of the homology lemma called \ii{cohomology lemma}.
 
     \begin{defn}
+        \label{dualrel}
         The dual of the boundary maps which we shall call
         \ii{coboundary maps}, is the group homomorphsm defined by
         \[ d_{p+1} : C^p \to C^{p+1} \quad d_{p+1}\cc{\sigma} := \cc{\sigma} \del_{p+1} \quad \forall \cc{\sigma} \in C^p.\]
