--- a/tesi/sections/2/3.tex
+++ b/tesi/sections/2/3.tex
@@ -1,5 +1,12 @@
 \documentclass[../2.tex]{subfiles}
 \begin{document}
+
+    On a graph that admits non trivial gradient and divergence,
+    we can define a non trivial laplacian operator on cochains as the gradient of the divergence.
+    Since we are going to represent it on chains we have that
+    \[ d_1d_1^\dagger \cc{i} = \cc{i}\del_1^\dagger\del_1, \]
+    which is the adjoint of $\del_1\del_1^\dagger\ch{i}$.
+
     \begin{defn}
         Let $\mc{G}$ be a graph, we define the \ii{$0$-laplacian} $\Delta_0 : C_0 \to C_0$ by 
         \[ \Delta_0 := \del_1 \del^\dagger_1.\]
