--- a/tesi/bibliography.bib
+++ b/tesi/bibliography.bib
@@ -63,3 +63,10 @@
   title = {Categories for the Working Mathematician},
   year = 1971
 }
+
+@book{bondy,
+  author = {Bondy, J. A. and Murty, U. S. R.},
+  publisher = {Elsevier},
+  title = {Graph Theory with Applications},
+  year = 1976
+}
