--- a/tesi/sections/1/2.tex
+++ b/tesi/sections/1/2.tex
@@ -7,6 +7,7 @@
     can be found in \cite{comptop} at 3.1 or in \cite{rotman} at 7.3.
     
     \begin{defn}
+        \label{def:1:2:1}
         Let $\mc{V}$ be a finite set, we define an \ii{abstract simplicial complex} $\mc{A}$ to be 
         a family of non empy subsets of $\mc{V}$ such that:
         \begin{enumerate}[(i)]
