--- a/tesi/sections/2.tex
+++ b/tesi/sections/2.tex
@@ -10,4 +10,7 @@
     \begin{section}{Laplacian Operators on Graphs}
         \subfile{sections/2/3}
     \end{section}
+    \begin{section}{Heat Equation on Graphs}
+        \subfile{sections/2/4}
+    \end{section}
 \end{document}
