--- a/tesi/sections/2/3.tex
+++ b/tesi/sections/2/3.tex
@@ -12,7 +12,7 @@
         \[ \Delta_0 := \del_1 \del^\dagger_1.\]
     \end{defn}
 
-    One intersting propertiy of the $1$-laplacian is that the dimension of its kernel equals the connected components of the graph.
+    One interesting propertiy of the $1$-laplacian is that the dimension of its kernel equals the connected components of the graph.
     To illustrate some of the properties of graphs we will refer to the graph in \autoref{fig:2:3}.
 
     \begin{figure}[H]
