--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -49,6 +49,7 @@
 
 \theoremstyle{remark}
 \newtheorem*{rem}{Remark}
+\newtheorem*{obs}{Observation}
 
 % \AtAppendix{
 %     \renewtheorem{thm}{Theorem}[chapter]
@@ -137,6 +138,10 @@
         \begin{chapter}{Category Theory}
             \label{app:A}
             \subfile{sections/appendixA/main}
+        \end{chapter}
+        \begin{chapter}{Dirac Notation}
+            \label{app:B}
+            \subfile{sections/appendixB/main}
         \end{chapter}
         % \begin{chapter}{Construction of Simplicial Complexes from Point Clouds}
         %     \label{app:B}
