--- a/tesi/sections/2/2.tex
+++ b/tesi/sections/2/2.tex
@@ -1,19 +1,22 @@
 \documentclass[../2.tex]{subfiles}
 \begin{document}
-    Only one boundary $\del_1$ and one coboundary $\del_1^\dagger$ can be defined on graphs, we shall name their dual representatives  respectively gradient $d_1^\dagger$ and divergence $d_1$.
+    
+    SInce a graph is a $1$-diemnsional simplicial complex we can define only one boundary $\del_1$ and one coboundary $\del_1^\dagger$.
+    We briefly recall the definitions in this context.
 
     \begin{defn}
         Let $\mc{G}$ be a graph, we define the \ii{boundary} $\del_1 : C_1 \to C_0$ by 
-        \[ \del_1\ch{i,j} := \ch{i} - \ch{j} \quad \forall \ch{i,j} \in C_1,\]
-        we furthermore define the \ii{coboundary} $\del^\dagger_1 : C_0 \to C_1$ by 
+        \[ \del_1\ch{i,j} := \ch{i} - \ch{j} \quad \forall \ch{i,j} \in C_1.\]
+        We define the \ii{coboundary} $\del^\dagger_1 : C_0 \to C_1$ by 
         \[ \del^\dagger_1\ket{i} := \sum_{j : \ket{i,j} \in C_1} \ket{i,j}.\]
+        We define the \ii{divergence} $d_1 : C^0 \to C^1$ by
+        \[ d_1\cc{i} = \cc{i}\del_1,\]
+        where the cochain $\cc{i}\del_1$ is the dual of the chain $\del_1^\dagger\ch{i}$,
+        therefore we can represent $d_1$ on cochain via $\del_1^\dagger$ on chains.
     \end{defn}
 
-    From definition \ref{dualrel} we have that the divergence satisfies the dual relation
-    \[ d_1\cc{i,j} = \cc{i,j}\del_1,\]
-    where the cochain $\cc{i,j}\del_1$ is the dual of the chain $\del_1^\dagger\ch{i,j}$,
-    therefore we can represent $d_1$ on cochain via $\del_1^\dagger$ on chains.\\
-    Similarly we can represent $d_1^\dagger$ with $\del_1$.
+    We define $d_1 = (\del_1)^*$ and $d_1^\dagger = (\del_1^\dagger)^*$ and we identify $C_p = C^p$ with the above choice of
+    canonical basis.
 
     % {\color{red} Disegno che mostra il cobordo di un nodo}
 
