--- a/tesi/sections/2/1.tex
+++ b/tesi/sections/2/1.tex
@@ -37,7 +37,7 @@
         of $e$. A graph where the ordering of the ends of an edge is meaningful is said to be a \ii{directed} graph.
     \end{defn}
 
-    Fig. \ref{fig:2:2} represents an undirected graph with four vertices and seven edges.
+    Fig. \ref{fig:2:2} represents an undirected graph with four vertices marked in blue and seven edges.
 
     \begin{defn}
         Let $\mc{G}$ be an undirected graph, we define the \ii{adjacency matrix} $A$ of $\mc{G}$ as follows,
