--- a/tesi/sections/2/4.tex
+++ b/tesi/sections/2/4.tex
@@ -55,6 +55,7 @@
         \[ \Delta_0 \frac{\ch{1}+\ch{2}+\ch{3}}{\sqrt{3}} = 0 , \;
         \Delta_0 \frac{\ch{3}-\ch{1}}{\sqrt{2}} = 3 \frac{\ch{3}-\ch{1}}{\sqrt{2}}, \;
          \Delta_0 \frac{\ch{2}-\ch{1}}{\sqrt{2}} = 3 \frac{\ch{2}-\ch{1}}{\sqrt{2}}. \]
+         {\color{red} Not orthonormal !} \\
         For the block of $\{\ch{8},\ch{9}\}$, we have 
         \[ \Delta_0 \frac{\ch{8}+\ch{9}}{\sqrt{2}} = 0, \;
         \Delta_0 \frac{\ch{8}-\ch{9}}{\sqrt{2}} = 2 \frac{\ch{8}-\ch{9}}{\sqrt{2}}. \]
