--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -143,11 +143,10 @@
             \label{app:B}
             \subfile{sections/appendixB/main}
         \end{chapter}
-        % \begin{chapter}{Construction of Simplicial Complexes from Point Clouds}
-        %     \label{app:B}
-        %     Cech, Alpha and Delauney complexes.
-        %     Nerve Theorem.
-        % \end{chapter}
+        \begin{chapter}{Laplacian Operators}
+            \label{app:C}
+            \subfile{sections/appendixC/main}
+        \end{chapter}
     \end{appendices}
     \newpage
     \printbibliography[heading = bibintoc]
