--- a/tesi/sections/2/3.tex
+++ b/tesi/sections/2/3.tex
@@ -13,7 +13,8 @@
     \end{defn}
 
     One interesting propertiy of the $1$-laplacian is that the dimension of its kernel equals the connected components of the graph.
-    To illustrate some of the properties of graphs we will refer to the graph in \autoref{fig:2:3}.
+    More details on laplacian kernels can b found in App. \ref{app:C}.
+    To illustrate some of the properties of graphs we will refer to the graph in Fig. \ref{fig:2:3}.
 
     \begin{figure}[H]
         \begin{minipage}{.5\textwidth}
