--- a/tesi/bibliography.bib
+++ b/tesi/bibliography.bib
@@ -54,7 +54,7 @@
 
 @misc{laplacian,
     title = {Spectra of combinatorial Laplace operators on simplicial complexes}, 
-    author = {Danijela Horak and Juergen Jost},
+    author = {Danijela Horak and J{\"u}rgen Jost},
     year={2011}
 }
 
