--- a/tesi/sections/2/1.tex
+++ b/tesi/sections/2/1.tex
@@ -3,20 +3,20 @@
     Graphs are used to encode a wide variety of data, from social networks friendships to maps.    
     We can actually consider graphs as the first topological notion introduced in mathematics.
     Their introduction dates back to the XVIII century.
-    Euler noticed that in Koningsberg, there was no path that 
+    Euler noticed that in K{\"o}ningsberg, there was no path that 
     allowed to cross all seven bridges just once. Hence, he started to simplify the problem to approach it in a more mathematical 
     way.
     \begin{figure}[H]
         \begin{minipage}{.5\textwidth}
             \centering
             \includegraphics[width=6cm, height=4cm]{sections/2/Bridge}
-            \caption{The city of Konigsberg and the\\ seven bridges.}
+            \caption{The city of K{\"o}nigsberg and the\\ seven bridges.}
             \label{fig:2:1}
         \end{minipage}
         \begin{minipage}{.5\textwidth}
             \centering
             \includegraphics[width=4cm, height=3cm]{sections/2/kgraph}
-            \caption{Graph representing Konigsberg's seven bridges.}
+            \caption{Graph representing K{\"o}nigsberg's seven bridges.}
             \label{fig:2:2}
         \end{minipage}
     \end{figure}
