--- a/tesi/bibliography.bib
+++ b/tesi/bibliography.bib
@@ -70,3 +70,17 @@
   title = {Graph Theory with Applications},
   year = 1976
 }
+
+@article{bronstein,
+   title={Geometric Deep Learning: Going beyond Euclidean data},
+   publisher={Institute of Electrical and Electronics Engineers (IEEE)},
+   author={Bronstein, Michael M. and Bruna, Joan and LeCun, Yann and Szlam, Arthur and Vandergheynst, Pierre},
+   year={2017}
+}
+
+@book{fomin,
+  author = {I. M. Gelfand and S. V. Fomin},
+  publisher = {Dover},
+  title = {Calculus of Variations},
+  year = 1963
+}
