--- a/tesi/sections/2.tex
+++ b/tesi/sections/2.tex
@@ -10,7 +10,10 @@
     \begin{section}{Laplacian Operators on Graphs}
         \subfile{sections/2/3}
     \end{section}
-    \begin{section}{Heat Equation on Graphs}
+    \begin{section}{Properties of the Laplacian Eigenfunctions}
         \subfile{sections/2/4}
+    \end{section}
+    \begin{section}{Heat Equation on Graphs}
+        \subfile{sections/2/5}
     \end{section}
 \end{document}
