--- a/tesi/sections/2/2.tex
+++ b/tesi/sections/2/2.tex
@@ -1,7 +1,7 @@
 \documentclass[../2.tex]{subfiles}
 \begin{document}
     
-    SInce a graph is a $1$-diemnsional simplicial complex we can define only one boundary $\del_1$ and one coboundary $\del_1^\dagger$.
+    SInce a graph is a $1$-dimensional simplicial complex we can define only one boundary $\del_1$ and one coboundary $\del_1^\dagger$.
     We briefly recall the definitions in this context.
 
     \begin{defn}
