--- a/tesi/sections/2/4.tex
+++ b/tesi/sections/2/4.tex
@@ -6,6 +6,7 @@ The laplacian eigenfunction are the solution of the variational problem for an a
 \begin{defn}
     Let $f:M\to\R$ be a sufficiently regular funcion, we define the \ii{Dirichlet energy functional} to be
     \[ D[f] := \int_{M} dx |\nabla f(x)|^2 = \int_{M} dx f(x)\Delta f(x) .\]
+    {\color{red} La seconda uguaglianza è vera solo se f si annulla sul bordo.}
 \end{defn}
 
 The variational problem for the Dirichlet energy leads to the Euler-Lagrange equations when it is restricted to those functions which
